# uartool

./: CMakeLists.txt  LICENSE  README.md
examples/: rx_example.c  tx_example.c
include/: uartool.h
src/: uartool.c
